--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,32 @@
 /.vs/MiveArchiver/v15/Server/sqlite3/storage.ide
 /.vs/MiveArchiver/v15/Server/sqlite3/storage.ide-shm
 /.vs/MiveArchiver/v15/Server/sqlite3/storage.ide-wal
+
+#Ignore thumbnails created by Windows
+Thumbs.db
+#Ignore files built by Visual Studio
+*.obj
+*.user
+*.aps
+*.pch
+*.vspscc
+*_i.c
+*_p.c
+*.ncb
+*.suo
+*.tlb
+*.tlh
+*.bak
+*.ilk
+*.log
+[Bb]in
+[Dd]ebug*/
+*.lib
+*.sbr
+obj/
+[Rr]elease*/
+_ReSharper*/
+[Tt]est[Rr]esult*
+.vs/
+#Nuget packages folder
+packages/
