--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,9 @@ _ReSharper*/
 .vs/
 #Nuget packages folder
 packages/
+/MiveArchiver/bin/Debug/MiveArchiver.exe
+/MiveArchiver/bin/Debug/MiveArchiver.pdb
+/MiveArchiver/obj/Debug/MiveArchiver.csproj.FileListAbsolute.txt
+/MiveArchiver/obj/Debug/MiveArchiver.csprojResolveAssemblyReference.cache
+/MiveArchiver/obj/Debug/MiveArchiver.exe
+/MiveArchiver/obj/Debug/MiveArchiver.pdb
