--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,9 @@ MiveArchiver/bin/Debug/*.*
 MiveArchiver/obj/Debug/*.*
 .vs/*
 .vs/*.*
-
+MiveArchiver\obj\Debug\*
+MiveArchiver\obj\Debug\*.*
+\MiveArchiver\obj\Debug\*.*
 /MiveArchiver/bin/Debug/MiveArchiver.exe
 /MiveArchiver/bin/Debug/MiveArchiver.pdb
 /MiveArchiver/obj/Debug/MiveArchiver.csproj.FileListAbsolute.txt
