--- a/MiveArchiver/MiveArchiver.csproj
+++ b/MiveArchiver/MiveArchiver.csproj
@@ -56,6 +56,7 @@
     <Compile Include="IArchiver.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThreadCompressFileData.cs" />
     <EmbeddedResource Include="ArchiverForm.resx">
       <DependentUpon>ArchiverForm.cs</DependentUpon>
     </EmbeddedResource>
